--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,19 @@
 version: "3.9"
 
 services:
+  mysql:
+    image: mysql:8
+    restart: always
+    ports:
+      - 3306:3306
+    volumes:
+      - mysqldata:/var/lib/mysql
+    environment:
+      - MYSQL_DATABASE=customers
+      - MYSQL_ROOT_PASSWORD=passwor
+    networks:
+      - customer-network
+    pull_policy: always
   api:
     image: customerapi
     build: .
@@ -12,20 +25,8 @@ services:
       - mysql
     networks:
       - customer-network
-  mysql:
-    image: mysql:8
-    ports:
-      - 3306:3306
-    volumes:
-      - ~/apps/mysql:/var/lib/mysql
-    environment:
-      - MYSQL_ROOT_PASSWORD=S3cret
-      - MYSQL_PASSWORD=An0thrS3crt
-      - MYSQL_USER=customer_user
-      - MYSQL_DATABASE=customer_db
-    networks:
-      - customer-network
-    pull_policy: always
 networks:
   customer-network:
     driver: bridge
+volumes:
+  mysqldata:
