fix: change the dabase port and optimize dockerfile

--- a/CustomerAPI/appsettings.json
+++ b/CustomerAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "server=mysql;port=3306;database=customers;uid=root;pwd=passwor"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
