--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,6 +11,8 @@ services:
     environment:
       - MYSQL_DATABASE=customers
       - MYSQL_ROOT_PASSWORD=passwor
+      - MYSQL_USER=dbuser
+      - MYSQL_PASSWORD=dbuserpassword
     networks:
       - customer-network
     pull_policy: always
@@ -20,7 +22,6 @@ services:
     pull_policy: always
     ports:
       - "8000:80"
-      - "8001:443"
     depends_on:
       - mysql
     networks:
