feat: add aspnet core environment

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -24,6 +24,8 @@ services:
       - "8000:80"
     depends_on:
       - mysql
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
     networks:
       - customer-network
 networks:
